# 8bit

./: CMakeLists.txt  README.md  main.cpp  test.cpp  test.h
src/machine/: machine.cpp  machine.h
src/machine/IO/: output.cpp  output.h
src/machine/Processor/: CPU.cpp  CPU.h
src/machine/Processor/instructions/: instructions.cpp  instructions.h
src/machine/RAM/: RAM.cpp  RAM.h
